k8s/base/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: billcom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8001"
    spec:
      containers:
        - name: user-service
          image: billcom/user-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8001
          resources:
            requests:
              cpu: "100m"     # 0.1 vCPU garanti — HPA scale up si > 70m (70%)
              memory: "96Mi"
            limits:
              cpu: "300m"     # user-service : moins de trafic que product/order
              memory: "384Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: billcom
  labels:
    app: user-service
spec:
  selector:
    app: user-service
  ports:
    - name: http
      port: 8001
      targetPort: 8001
